# OpenglTutorials

./: README.md
deneme1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  deneme1  deneme1.cpp
deneme1/libraries/glad/include/glad/: glad.h
deneme1/libraries/glad/src/: glad.c
deneme1/resources/: shaders.shader
deneme1/src/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
